--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.1'
+	implementation 'com.alibaba:druid-spring-boot-starter:1.2.8'
 }
 
 tasks.named('test') {
